<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="movie_details">Movie Details</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_description">Movie Description</string>
    <string name="release_date">Release Date</string>
    <string name="user_rating">User Rating</string>

    <string name="title_activity_settings">Settings</string>
    <string name="pref_order_label">Sort movies by</string>
    <string name="pref_order_key" translatable="false">movies_order</string>
    <string name="pref_order_default" translatable="false">@string/pref_order_popular</string>
    <string name="pref_order_popular" translatable="false">popular</string>
    <string name="pref_order_top_rated" translatable="false">top_rated</string>
    <string name="pref_order_popular_opt">Most Popular</string>
    <string name="pref_order_top_rated_opt">Top Rated</string>

    <string name="a11y_poster_image">Poster image</string>

    <string name="date_placeholder">dd/mm/yyyy</string>
    <string name="number_placeholder">x.xx</string>
</resources>
