<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MovieDetailFragment">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/moviePoster"
        android:padding="5dp"
        android:scaleType="fitCenter"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/a11y_poster_image" />

    <TextView
        android:id="@+id/movieTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@id/moviePoster"
        android:text="@string/movie_title"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/movie_description"
        android:id="@+id/movieOverview"
        android:layout_below="@+id/moviePoster"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/release_date"
        android:id="@+id/movieReleaseLabel"
        android:layout_below="@+id/movieOverview"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/movieRelease"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/movieReleaseLabel"
        android:layout_toEndOf="@+id/movieReleaseLabel"
        android:text="@string/date_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/user_rating"
        android:id="@+id/movieRatingLabel"
        android:layout_below="@+id/movieReleaseLabel"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/movieRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/movieRatingLabel"
        android:layout_toEndOf="@+id/movieRatingLabel"
        android:text="@string/number_placeholder"
        android:textAppearance="?android:attr/textAppearanceMedium" />
</RelativeLayout>